@@ -12,18 +12,18 @@ fi
 if test -e /proc/
 then {
     export CPUCOUNT=`grep -c ^processor /proc/cpuinfo`
-    export TOOLSET=gcc
+    [ `which clang++` ] || export TOOLSET=toolset=gcc
     export LD_LIBRARY_PATH=../dist/lib
 }
 else {
     export CPUCOUNT=`sysctl -n hw.ncpu`
-    export TOOLSET=darwin
+    export TOOLSET=toolset=darwin
     export DYLD_LIBRARY_PATH=../dist/lib
     export LANG=C
 }
 fi
 
-if ../bjam -j$CPUCOUNT toolset=$TOOLSET $VARIANTS `../python.opts.sh`
+if ../bjam -j$CPUCOUNT $TOOLSET $VARIANTS `../python.opts.sh`
 then {
     echo fost-internet $VARIANTS OK
     exit 0
